--- a/papers/2015-07-10-现代浏览器渲染流水线.md
+++ b/papers/2015-07-10-现代浏览器渲染流水线.md
@@ -5,6 +5,7 @@ date: 2015-07-10
 
 ## 现代浏览器的渲染
     现代浏览器一般都采用合成化渲染的机制来渲染高复杂度和高性能的现代网页，至于为什么要采用合成化渲染而不是其他的方式这就要讲到其他的两种渲染机制了，一种是软件渲染机制，另一种就是硬件加速渲染机制。 
+    像以前的老IE时代的网页基本上都是通过CPU进行绘制的也就是采用软件渲染的机制来绘制整个页面，
     要解释清楚这三种渲染机制的特性就得再介绍一个知识点，那就是光栅化。 
     所谓的光栅化就是将基于数学几何数据的描述转化为基于像素点的描述。CPU和GPU都能做光栅化。
     CPU做光栅化的优势是可以很方便的处理非常复杂的几何描述，例如文字的几何描述、svg-path等等这种强逻辑的路径描述等。当然缺点也很明显，例如参杂了复杂的逻辑和不可并行的特点，CPU光栅化速度会比较慢。
