--- a/papers/2015-01-11-npm模块安装.md
+++ b/papers/2015-01-11-npm模块安装.md
@@ -293,3 +293,5 @@ devDependencies
 }
 复制代码
 prepublish脚本会在publishing前运行，这样用户就不用自己去require来编译就能使用。并且在开发模式中（比如本地运行npm install）会运行这个脚本以便更好地测试。
+
+## Script install and uninstall
