--- a/papers/2015-01-11-npm模块安装.md
+++ b/papers/2015-01-11-npm模块安装.md
@@ -295,3 +295,5 @@ devDependencies
 prepublish脚本会在publishing前运行，这样用户就不用自己去require来编译就能使用。并且在开发模式中（比如本地运行npm install）会运行这个脚本以便更好地测试。
 
 ## Script install and uninstall
+
+some about .npmrc and npm config
