feat: add some tips on npm usage

--- a/papers/2015-01-11-npm模块安装.md
+++ b/papers/2015-01-11-npm模块安装.md
@@ -3,6 +3,7 @@ title: npm模块安装
 date: 2015-01-11
 ---
 
+# 使用简介
 npm的模块可以安装在全局也可以安装在本地
 默认安装在本地
 
@@ -297,3 +298,9 @@ prepublish脚本会在publishing前运行，这样用户就不用自己去requir
 ## Script install and uninstall
 
 some about .npmrc and npm config
+
+如果不清楚npm的命令可以使用`npm`的`help`命令，例如view命令:
+
+```shell
+npm help view
+```
