feat: fix list link encode space

--- a/papers/2015-10-02-光线追踪.md
+++ b/papers/2015-10-02-光线追踪.md
@@ -20,7 +20,7 @@ date: 2015-10-02
 
 光线追踪是一个完全不一样的思路，光线追踪是利用了物理中的`光路的可逆性`来实现三维场景的渲染，主要原理是从观察者的眼睛的位置发射一条经过投影平面的射线，然后计算这条射线与场景中的三维物体的相交，再根据该相交点的材质、法线、反射、折射、以及阴影检测来综合计算该点的颜色值。原理图如下：
 
-[ray-tracing]: 
+[ray-tracing]: https://jasonchen1982.github.io/blog/pictures/raytracing/raytracediagram.png	"ray tracing diagram"
 
 
 
