feat: add some ok

--- a/papers/2015-10-02-光线追踪.md
+++ b/papers/2015-10-02-光线追踪.md
@@ -20,6 +20,18 @@ date: 2015-10-02
 
 光线追踪是一个完全不一样的思路，光线追踪是利用了物理中的`光路的可逆性`来实现三维场景的渲染，主要原理是从观察者的眼睛的位置发射一条经过投影平面的射线，然后计算这条射线与场景中的三维物体的相交，再根据该相交点的材质、法线、反射、折射、以及阴影检测来综合计算该点的颜色值。原理图如下：
 
+![ray tracing diagram][ray-tracing]
+
+
+
+知道了原理，我们就可以通过将三维场景的坐标点投影到二维平面也就是设备的屏幕上，从而渲染出在当前这个视角下的画面了。关于投影的问题，其实我们不需要像光栅化机制的渲染系统一样非得利用投影矩阵来完成投影计算，我们可以直接利用向量的计算就能达到这样的目的，这也是ray tracing基于光线的渲染给我们带来的小小的便利，并且在以后的更复杂的光线追踪中也很少用到矩阵的操作（ray tracing的方式从原理上避免了这些）
+
+## 验证
+
+结合上面介绍的，我们来一步一步实现投影平面上各个像素颜色的计算（也可以称为渲染过程）。
+
+首先我们要先得到发射出来的光线的向量，
+
 [ray-tracing]: https://jasonchen1982.github.io/blog/pictures/raytracing/raytracediagram.png	"ray tracing diagram"
 
 
