feat: add content

--- a/papers/2015-10-02-光线追踪.md
+++ b/papers/2015-10-02-光线追踪.md
@@ -26,11 +26,62 @@ date: 2015-10-02
 
 知道了原理，我们就可以通过将三维场景的坐标点投影到二维平面也就是设备的屏幕上，从而渲染出在当前这个视角下的画面了。关于投影的问题，其实我们不需要像光栅化机制的渲染系统一样非得利用投影矩阵来完成投影计算，我们可以直接利用向量的计算就能达到这样的目的，这也是ray tracing基于光线的渲染给我们带来的小小的便利，并且在以后的更复杂的光线追踪中也很少用到矩阵的操作（ray tracing的方式从原理上避免了这些）
 
-## 验证
+
+
+## 照相机
+
+照相机的作用就是帮我们处理好三维空间到二维平面的投影关系，让我们只需要告诉照相机我要渲染哪个像素点，照相机就会给我们生成一条射线，然后我们用这条射线到场景里面与物体计算相交，得出相交得最近的物体，让后根据法线、光源、反射光源来计算该点的颜色值。照相机的代码如下：
+
+```js
+import { Vector3 } from './math/Vector3';
+import { Ray } from './math/Ray';
+import { _Math } from './math/Math';
+
+function Camera(eye, fov, front, up) {
+  this.eye = eye;
+  this.front = front;
+  this.uper = up;
+  this.fov = fov;
+  this.init();
+}
+Camera.prototype = {
+  constructor: Camera,
+  init: function () {
+    this.right = new Vector3().crossVectors(this.front, this.uper);
+    this.up = new Vector3().crossVectors(this.right, this.front);
+    this.fovScale = Math.tan(this.fov * 0.5 * _Math.DTR) * 2;
+  },
+  getRay: function (x, y) {
+    var r = new Vector3().copy(this.right).multiplyScalar((x - 0.5) * this.fovScale);
+    var u = new Vector3().copy(this.up).multiplyScalar((y - 0.5) * this.fovScale);
+    var d = new Vector3().copy(this.front).add(r).add(u).normalize();
+
+    return new Ray(this.eye, d);
+  }
+};
+```
+
+`getRay`方法就是生成射线的方法，接收二维投影平面的`x` `y` 坐标值。为了方便和与常用的坐标系保持一致，我们需要对二维投影平面的坐标系做一个定义，这里我们采用`笛卡尔坐标系`。中心点为`(0,0)`点，然后将 `x` `y` 取值区间设置在[-1,1]之间方便后续利用视角`fov`的概念来描述视野的宽广度。
+
+因此对于像素点 `x` `y` ，我们可以得到光线`ray`:
+
+```js
+const r = this.right.multiply((x - 0.5) * this.fovScale);
+const u = this.up.multiply((y - 0.5) * this.fovScale);
+const ray = new Ray3(this.eye, this.front.add(r).add(u).normalize());
+```
+
+其中`this.eye`是光线的起始位置，`this.front.add(r).add(u).normalize()`是光线的方向向量。`this.fovScale`是通过`fov`计算而来的缩放标量。
+
+
+
+## 计算过程
+
+有了这个射线我们就可以与场景中的物体进行相交监测，并找出最近的那个相交的物体，进而计算出该点的颜色值。这个过程是以个纯数学过程，例如利用向量的`点乘`和`叉乘`。
 
 结合上面介绍的，我们来一步一步实现投影平面上各个像素颜色的计算（也可以称为渲染过程）。
 
-首先我们要先得到发射出来的光线的向量，
+假如我们要渲染而为投影屏幕上中心上的那个点
 
 [ray-tracing]: https://jasonchen1982.github.io/blog/pictures/raytracing/raytracediagram.png	"ray tracing diagram"
 
