feat: finish ray tracing

--- a/papers/2015-10-02-光线追踪.md
+++ b/papers/2015-10-02-光线追踪.md
@@ -77,13 +77,30 @@ const ray = new Ray3(this.eye, this.front.add(r).add(u).normalize());
 
 ## 计算过程
 
-有了这个射线我们就可以与场景中的物体进行相交监测，并找出最近的那个相交的物体，进而计算出该点的颜色值。这个过程是以个纯数学过程，例如利用向量的`点乘`和`叉乘`。
+有了这个射线我们就可以与场景中的物体进行相交监测，并找出最近的那个相交的物体，进而计算出该点的颜色值。这个过程是以个纯数学过程，例如利用向量的`点乘`和`叉乘`。大致的计算过程如下：
 
-结合上面介绍的，我们来一步一步实现投影平面上各个像素颜色的计算（也可以称为渲染过程）。
+假设光源的方向向量为`light`，那么漫反射的强度就可以用相交点的法线方向`normal`和`light`的点乘来模拟：
 
-假如我们要渲染而为投影屏幕上中心上的那个点
+```js
+const strength = normal.dot(lightDir);
+```
+
+那么漫反射的颜色值就是物体本身的材质颜色值乘以`strength`。
+
+关于反射和阴影，除了物体表面的漫反射，我们还可以利用这种方式来计算出镜面反射效果。如你所知，镜面反射会进行递归地计算反射面的反射面，最终计算出该点的总和颜色值。
+
+```js
+const reflect = normal.multiplyScalar(-2 * normal.dot(direction)).add(ray.direction)
+```
+
+更多的内容可以查看我的一个简单的光线追踪引擎 [rayTracer][rayTracer] ，喜欢的求star～～～
+
+
+
+## 结语
+
+这样一来我们就可以循环遍历二维投影平面的每一个像素值并在该位置上生成一个光线，然后挨个计算该处应该表现的值（也可以称为渲染过程）。
 
 [ray-tracing]: https://jasonchen1982.github.io/blog/pictures/raytracing/raytracediagram.png	"ray tracing diagram"
-
-
+[rayTracer]: https://github.com/jasonChen1982/rayTracer	"ray tracing engine"
 
