--- a/papers/2016-11-02-Charles使用记录.md
+++ b/papers/2016-11-02-Charles使用记录.md
@@ -2,3 +2,37 @@
 title: Charles使用记录
 date: 2016-11-02
 ---
+
+#### 安装破解版Charles
+
+##### mac
+
+在官网下载正版charles软件，在mac上找到安装应用并右键选择`显示包内容`,进入`content/java`,将[charles.jar][charles.jar] 替换，再打开应用，就已经是破解版了:)
+
+##### windows
+
+
+
+#### 开发常用功能
+
+##### 过滤网络请求（抓包）
+
+
+
+##### 过滤手机上的网络请求 
+
+
+
+##### 模拟低网速请求
+
+
+
+##### 进行网络请求
+
+
+
+##### 截取https网络请求
+
+
+
+[charles.jar]: https://jasonchen1982.github.io/blog/source/charles/charles.jar	"charles.jar"
