finish: finish performance about network paper

--- a/papers/2015-03-14-前端性能优化.md
+++ b/papers/2015-03-14-前端性能优化.md
@@ -2,3 +2,187 @@
 title: 前端性能优化
 date: 2015-03-14
 ---
+
+### 优化理念
+
+工程师在处理和解决前端性能问题时大致可以分为两个方面，一个是`网络加载性能`另一个就是`页面渲染和重绘性能`。明确一点，我们能进行合理的优化的前提是深入理解浏览器的底层实现原理，只有了解了浏览器底层的操作机制才能真正的对症下药并且直达病灶。前端工程师最忌讳的就是将精力和注意力集中在不重要的性能优化上了，例如纠结于到底是使用`i++`还是`i += 1`，是用`for`循环还是`while`循环，判断类型用`typeof`还是`Object.prototype.toString.call()`等等，这些问题只有在当你解决了现有问题之后还想追求极致优化的时候才需要重点考虑的。大部分情况下，一些严重的性能问题都不是由于这些代码引起的，直接导致卡顿活着延迟的是那些你看上去很正常的很平常的代码调用。
+
+本文系列文章将分成两个系类：`网络性能`和`渲染性能`
+
+考虑篇幅本文将先讨论`网络性能`中的注意事项，`渲染性能`将在下篇文章另行讨论
+
+### 网络性能优化
+
+大家熟知的网络性能优化一般有`资源压缩`、`冗余资源剔除`、`资源缓存`、`非关键资源异步加载`、`首屏资源内联`、`请求合并`等等。
+
+下面我们将来聊聊网络性能优化的一些事情。
+
+#### 文本
+
+资源压缩就是使用更少的位对信息进行编码的过程，在我们现实的开发中一般都会通过各种工程工具将我们开发好的源代码举行压缩，压缩的策略主要是去注释、去空格、变量编码等等一系列对浏览器解析文件无关的内容。
+
+除此之外，我们还能通过部署GZIP服务来对文本内容进行压缩。我们只需要进行相应的服务器配置就能受益GZIP给我们带来的强大的压缩服务，具体配置可以参照 [server configs][server-configs]
+
+> ⚠️：GZIP的压缩有些时候会使文件变大，如果资源本事已经非常小且 GZIP 字典的开销大于压缩缩减的大小时，或者资源已经得到充分压缩时，就会导致这种情况。因此某些服务器一般都允许您指定最小文件大小阈值。
+
+#### 图片
+
+网络传输中除了文本，还有一部分占比非常大的资源就是图片资源了。图片具有更丰富的视觉表现力，能够更直观的表达内容，这是一门视觉科学艺术。
+
+当我们在实现界面效果时，我们应该确认是否确实需要使用图片，`CSS3`是否能达到效果，是否使用`svg`要更合适一些等。
+
+说到图片，不得不提的就是`矢量图`和`光栅图`。
+
+`矢量图`顾名思义就是可以与分辨率无关，是一种基于数学几何的形式来描述形状内容，在任何尺寸下都能清晰的呈现，但是一般只适合与描述简单的几何图形，不适合表达内容丰富的实物图像。在使用`svg`的过程中我们还可以使用[svgo][svgo]这个工具来优化`svg`文件的大小。
+
+`光栅图`也就是`位图(bitmap)`，是一种基于像素的描述，可以非常逼真的描述事物图像。在使用`光栅图`的时候一般可以通过`<img>`的`srcset`功能来为元素指定多种分辨率的图片资源[img srcset][img-attributes]
+
+```html
+<img src="clock-200.png" 
+     alt="Clock" 
+     srcset="clock-200.png 200w,
+             clock-400.png 400w"
+     sizes="(min-width: 600px) 200px, 50vw">
+<!-- or -->
+<img src="logo-sm.png" 
+     alt="scrset demo" 
+     srcset="logo-hd.png 2x">
+```
+
+当然也可以使用`<picture>`标签来适应分辨率
+
+```html
+<picture>
+  <source media="(min-width: 800px)" srcset="head.jpg, head-2x.jpg 2x">
+  <source media="(min-width: 450px)" srcset="head-small.jpg, head-small-2x.jpg 2x">
+  <img src="head-fb.jpg" srcset="head-fb-2x.jpg 2x" alt="a head carved out of wood">
+</picture>
+```
+
+关于媒体资源自适应适配的内容就不展开讨论了，感兴趣的可以查看[Responsive Web Design][responsive-web-design]
+
+一些常见的图片优化工具
+
+- [gifsicle][gifsicle]
+- [jpegtran][jpegtran]
+- [optipng][optipng] 无损
+- [pngquant][pngquant]有损
+
+#### 字体
+
+字体格式一般有四种：WOFF2、WOFF、EOT 和 TTF
+
+```css
+@font-face {
+  font-family: 'Awesome Font';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Awesome Font'),
+       url('/fonts/awesome.woff2') format('woff2'), 
+       url('/fonts/awesome.woff') format('woff'),
+       url('/fonts/awesome.ttf') format('truetype'),
+       url('/fonts/awesome.eot') format('embedded-opentype');
+}
+
+@font-face {
+  font-family: 'Awesome Font';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Awesome Font Italic'),
+       url('/fonts/awesome-i.woff2') format('woff2'), 
+       url('/fonts/awesome-i.woff') format('woff'),
+       url('/fonts/awesome-i.ttf') format('truetype'),
+       url('/fonts/awesome-i.eot') format('embedded-opentype');
+}
+```
+
+其中
+
+- `local()` 指令用于引用、加载和使用安装在本地的字体。
+- `url()` 指令用于加载外部字体，它可以包含可选的 `format()` 提示，指示由提供的网址引用的字体格式。
+
+还可以通过 [unicode-range 描述符][descdef-unicode-range]指定一个用逗号分隔的范围值列表，其中的每个值都可能采用下列三种不同形式中的一种：
+
+- 单一代码点（例如 U+416）
+- 间隔范围（例如 U+400-4ff）：表示范围的开始代码点和结束代码点
+- 通配符范围（例如 U+4??）：“?”字符表示任何十六进制数字
+
+```css
+@font-face {
+  font-family: 'Awesome Font';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Awesome Font'),
+       url('/fonts/awesome-jp.woff2') format('woff2'), 
+       url('/fonts/awesome-jp.woff') format('woff'),
+       url('/fonts/awesome-jp.ttf') format('truetype'),
+       url('/fonts/awesome-jp.eot') format('embedded-opentype');
+  unicode-range: U+3000-9FFF, U+ff??; /* Japanese glyphs */
+}
+```
+
+浏览器处理字体文件请求的时机：
+
+1. 浏览器请求 HTML 文档。
+2. 浏览器开始解析 HTML 响应和构建 DOM。
+3. 浏览器发现 CSS、JS 以及其他资源并分派请求。
+4. 浏览器在收到所有 CSS 内容后构建 CSSOM，然后将其与 DOM 树合并以构建渲染树。
+   - 在渲染树指示需要哪些字体变体在网页上渲染指定文本后，将分派字体请求。
+5. 浏览器执行布局并将内容绘制到屏幕上。
+   - 如果字体尚不可用，浏览器可能不会渲染任何文本像素。
+   - 字体可用之后，浏览器将绘制文本像素。
+
+不同浏览器之间实际行为有所差异：
+
+- Safari 会在字体下载完成之前延迟文本渲染。
+- Chrome 和 Firefox 会将字体渲染暂停最多 3 秒，之后他们会使用一种后备字体。并且字体下载完成后，他们会使用下载的字体重新渲染一次文本。
+- IE 会在请求字体尚不可用时立即使用后备字体进行渲染，然后在字体下载完成后进行重新渲染。
+
+##### 通过 Font Loading API 优化字体渲染
+
+[Font Loading API][css-font-loading]提供了一种脚本编程接口来定义和操纵 CSS 字体，追踪其下载进度，以及替换其默认延迟下载行为。例如，开可以指定字体的子集，并通过`api`让浏览器立即获取：
+
+```javascript
+var font = new FontFace("Awesome Font", "url(/fonts/awesome.woff2)", {
+  style: 'normal', unicodeRange:'U+000-5FF', weight:'400'
+});
+
+font.load(); // don't wait for the render tree, initiate an immediate fetch!
+
+font.ready().then(function() {
+  // apply the font (which may re-render text and cause a page reflow)
+  // after the font has finished downloading
+  document.fonts.add(font);
+  document.body.style.fontFamily = "Awesome Font, serif";
+
+  // OR... by default the content is hidden, 
+  // and it's rendered after the font is available
+  var content = document.getElementById("content");
+  content.style.visibility = "visible";
+
+  // OR... apply your own render strategy here... 
+});
+```
+
+并且，还可以检查字体状态（通过 [check()][font-face-set-check] 方法）并追踪其下载进度，以及一些自定义策略：
+
+- 您可以在获得字体前暂停所有文本渲染。
+- 您可以为每种字体实现自定义超时。
+- 您可以利用后备字体解除渲染阻止，并在获得字体后注入使用所需字体的新样式。
+
+>⚠️：在某些浏览器上，Font Loading API 仍处于开发阶段。可以考虑使用 [FontLoader polyfill][fontloader] 或 [webfontloader 内容库][webfontloader]来提供类似功能。
+
+[server-configs]: https://github.com/h5bp/server-configs "server configs"
+
+[img-attributes]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#Specifications "img attributs"
+[responsive-web-design]: https://developers.google.com/web/fundamentals/design-and-ui/responsive/ "Responsive Web Design"
+[svgo]: https://github.com/svg/svgo "svgo"
+[gifsicle]: https://github.com/kohler/gifsicle "gifsicle"
+[jpegtran]: http://jpegclub.org/jpegtran/ "jpegtran"
+[optipng]: http://optipng.sourceforge.net/ "optipng"
+[pngquant]: https://pngquant.org/ "pngquant"
+[descdef-unicode-range]: http://www.w3.org/TR/css3-fonts/#descdef-unicode-range "unicode-range 描述符"
+[css-font-loading]: http://dev.w3.org/csswg/css-font-loading/ "css font loading"
+[font-face-set-check]: http://dev.w3.org/csswg/css-font-loading/#font-face-set-check "font face set check"
+[fontloader]: https://github.com/bramstein/fontloader "fontloader polyfill"
+[webfontloader]: https://github.com/typekit/webfontloader "webfontloader"
