update: add svg paper content

--- a/papers/2014-12-01-首次入坑svg.md
+++ b/papers/2014-12-01-首次入坑svg.md
@@ -2,3 +2,22 @@
 title: 首次入坑svg
 date: 2014-12-01
 ---
+
+### svg 是什么
+
+`svg`的全称是可缩放矢量图形`(Scalable Vector Graphics)`，是一种用来描述二维矢量图形的`XML`标记语言。它能够很轻易的实现各种几何图形的绘制，像`d3.js`、`echarts.js`、`highcharts.js`这些数据可视化引擎都是使用的`svg`提供的图形绘制接口。
+
+由于`svg`是以数学的方式来描述几何图形，所以它的文件大小可以做到非常小，这一点相比于位图（`gif`、`png`、`jpeg`）而言对网络加载性能要更友好，所以在一些小icon、小图标、简单形状的界面UI上非常常用。
+
+### svg 能做什么
+
+在svg中有非常多的图形标签以及相关样式，它们的关系很像`html`与`css`的关系。我们可以使用`svg`来为网页绘制各种不规则的形状，并且叠加各种滤镜效果，除此之外我们还能像写`CSS3`动画一样来写`svg`的动画。
+
+##### 动画
+
+`svg`非常适合用来做线条动画、路径动画和变形动画，只要是关于几何形状变换的动画它都比`html`加`css`的方式要更适合。常见的基于`svg`实现的动画有：
+
+###### 结合`CSS3`的动画
+
+
+
