--- a/papers/2014-12-01-首次入坑svg.md
+++ b/papers/2014-12-01-首次入坑svg.md
@@ -13,11 +13,196 @@ date: 2014-12-01
 
 在svg中有非常多的图形标签以及相关样式，它们的关系很像`html`与`css`的关系。我们可以使用`svg`来为网页绘制各种不规则的形状，并且叠加各种滤镜效果，除此之外我们还能像写`CSS3`动画一样来写`svg`的动画。
 
-##### 动画
+#### 动画
 
 `svg`非常适合用来做线条动画、路径动画和变形动画，只要是关于几何形状变换的动画它都比`html`加`css`的方式要更适合。常见的基于`svg`实现的动画有：
 
-###### 结合`CSS3`的动画
+##### 结合`CSS3`的动画
+
+`svg`可以方便的结合`CSS3`的`transition`和`animation`来实现动画
+
+```html
+<?xml version="1.0"?>
+<svg width="120" height="120" viewPort="0 0 120 120" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <polygon class="rect rect_transition"></polygon>
+  <rect class="rect rect_animation"></rect>
+</svg>
+```
+
+```css
+.rect {
+  x: 120px;
+  y: 120px;
+  width: 80px;
+  height: 80px;
+  fill: #ff88aa;
+}
+
+.rect_transition {
+  x: 180px;
+  y: 180px;
+  fill: #ffaa88;
+  transition: 1s all ease-in-out;
+}
+
+.rect_animation {
+  animation: swip 1s ease-in-out infinite alternate;
+}
+
+@keyframes swip {
+  0% {
+    transform: matrix(1,0,0,1,-80,-80);
+  }
+  100% {
+    transform: matrix(1,0,0,1,80,80);
+  }
+}
+
+/* css motion path */
+.rect_motion_path {
+  motion-path: path("M200 200 S 200.5 200.1 348.7 184.4z");
+}
+@keyframes path-animation {
+  0% { 
+    motion-offset: 0;
+  }
+  100% { 
+    motion-offset: '100%';
+  }
+}
+```
+
+[动画demo](https://jsfiddle.net/jasonchen1882/v921vkjq/)
+
+> 一些浏览器下不支持transform: rotate() | translate() | scale(); 等这些形式的变换，只支持transform: matrix();的形式。
+
+###### 或者是结合`web animation api`来使用
+
+先定义好`css-motion-path`路径
+
+```css
+#motionPath {
+    motion-path: path("M900,190  L993,245 V201  A11,11 0 0,1 1004,190  H1075  A11,11 0 0,1 1086,201  V300  L1294,423 H1216  A11,11 0 0,0 1205,434  V789  A11,11 0 0,1 1194,800  H606  A11,11 0 0,1 595,789  V434  A11,11 0 0,0 584,423  H506 L900,190");
+}
+```
+
+然后再使用`web animation api`触发动画
+
+```js
+var positionKeyframes = [ {motionOffset: "0%"}, {motionOffset: "100%"} ];
+var positionTiming = {duration: 12000, iterations: Infinity};
+motionPath.animate(positionKeyframes, positionTiming);
+var rotationKeyframes = [ {motionRotation: "auto 0deg"}, {motionRotation: "auto -45deg"}, {motionRotation: "auto 0deg"} ];
+var rotationTiming = {duration: 1000, iterations: Infinity};
+motionPath.animate(rotationKeyframes, rotationTiming);
+```
+
+> 目前来说这种方式的兼容性还不是非常好
+
+##### 结合`svg`的`SMIL`动画功能
+
+> 自从Chrome 45.0开始，SMIL动画被弃用了，Chrome致力于使用CSS动画来实现所有的SMIL效果。
+
+`svg`的`SMIL`动画类型包括`<animate>`、`<animateMotion>`、`<animateTransform>`
+
+###### 关于`<animate>`功能
+
+```html
+<?xml version="1.0"?>
+<svg width="120" height="120" viewPort="0 0 120 120" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <rect x="10" y="10" width="100" height="100">
+    <animate attributeType="XML" attributeName="x" from="-100" to="120"
+        dur="10s" repeatCount="indefinite"/>
+  </rect>
+</svg>
+```
+
+`attributeName`可是设置该标签所具有的任何`property`
+
+###### 关于`<animateMotion>`的使用
+
+`<animateMotion>`功能可以使我们能够让一个元素沿着一条指定的路径移动，并且可以自动跟踪捕获切线方向。
+
+```html
+<path xmlns="http://www.w3.org/2000/svg" d="M10,110 A120,120 -45 0,1 110 10 A120,120 -45 0,1 10,110" stroke="lightgrey" stroke-width="2" fill="none" id="theMotionPath"/>
+<circle xmlns="http://www.w3.org/2000/svg" cx="" cy="" r="5" fill="red">
+  <animateMotion dur="6s" repeatCount="indefinite">
+    <mpath xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#theMotionPath"/>
+  </animateMotion>
+</circle>
+<rect x="0" y="0" rx="15" ry="15" width="20" height="20" fill="blue" stroke="black" stroke-width="1">
+  <animateMotion path="M 250,80 H 50 Q 30,80 30,50 Q 30,20 50,20 H 250 Q 280,20,280,50 Q 280,80,250,80Z" dur="3s" repeatCount="indefinite" rotate="auto">
+</rect>
+```
+
+[动画demo](https://jsfiddle.net/jasonchen1882/7vcbv3jL/)
+
+###### 关于`<animateTransform>`的使用
+
+`<animateTransform>`功能可以做和`matrix`相关的动画
+
+```html
+<polygon points="60,30 90,90 30,90">
+  <animateTransform attributeName="transform"
+                    attributeType="XML"
+                    type="rotate"
+                    from="0 60 70"
+                    to="360 60 70"
+                    dur="10s"
+                    repeatCount="indefinite"/>
+</polygon>
+```
+
+值得一提的是做`rotate`属性动画是`from`和`to`里面会出现三个参数，这是因为未经过改变的情况下`svg`里面物体的旋转中心都在画布的左上角，所以后面两个参数可以理解成重置物体的旋转中心。
+
+> 也可以在元素外再套一层`<g>`标签并设置`<g>`标签的偏移来实现相同的饶某个坐标旋转的效果。
 
 
+
+##### 结合`js`的动画功能
+
+`svg`当然可以结合`js`来制作酷炫好玩的动画效果，`js`可以实现自然的物理效果，例如这个我在之前做的的效果。
+
+* [小球涌出](https://jasonchen1982.github.io/labratory/svg/none/)
+* [仿照可口可乐](https://jasonchen1982.github.io/labratory/svg/coco/)
+* [spring](https://jasonchen1982.github.io/labratory/svg/circle/)
+
+说到`js`操作`svg`就不得不提到`snapsvg.js`这个裤的，堪称是`svg`界的`jquery`，可以让我们方便的操作`svg`元素，具体内容就不展开了，但是有一点要提醒的是`snapsvg.js`在使用`attr`时候有一个性能`bug`，可以换成原生的方法直接操作元素的相关属性。
+
+```js
+this.doc.attr({ transform: 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')' }); // 性能差 snap内部实现的问题
+this.doc.attr('transform', 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')'); // 性能差 snap内部实现的问题
+this.doc.attr({ cx: this.x, cy: this.y }); // 性能一般 snap内部实现的问题
+this.doc.node.style.transform = 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')'; // 性能优秀
+this.doc.node.setAttribute('cx', this.x); // 性能优秀
+this.doc.node.setAttribute('cy', this.y); // 性能优秀
+```
+
+
+
+### 一些有意思的功能
+
+###### 嵌入内容`<foreignObject`>
+
+`svg`里面有一个比较特殊的标签`foreignObject`，详情请看[嵌入内容](https://www.w3.org/TR/SVG2/embedded.html)
+
+```html
+<svg width="400px" height="300px" viewBox="0 0 400 300"
+     xmlns="http://www.w3.org/2000/svg">
+  <desc></desc>
+  <switch>
+    <foreignObject width="100" height="50"
+                   requiredExtensions="http://www.w3.org/1999/xhtml">
+      <body xmlns="http://www.w3.org/1999/xhtml">
+        <p class="text">Here is a paragraph that requires word wrap</p>
+      </body>
+    </foreignObject>
+	<!-- 如果不支持foreignObject则显示下面内容 -->
+    <text font-size="10" font-family="Verdana">
+      <tspan x="10" y="10">Here is a paragraph that</tspan>
+      <tspan x="10" y="20">requires word wrap.</tspan>
+    </text>
+  </switch>
+</svg>
+```
 
