update: adjust key word

--- a/papers/2014-12-01-首次入坑svg.md
+++ b/papers/2014-12-01-首次入坑svg.md
@@ -76,7 +76,7 @@ date: 2014-12-01
 
 > 一些浏览器下不支持transform: rotate() | translate() | scale(); 等这些形式的变换，只支持transform: matrix();的形式。
 
-###### 或者是结合`web animation api`来使用
+###### 也可以用`web animation api`来使用`motion-path`
 
 先定义好`css-motion-path`路径
 
@@ -101,7 +101,7 @@ motionPath.animate(rotationKeyframes, rotationTiming);
 
 ##### 结合`svg`的`SMIL`动画功能
 
-> 自从Chrome 45.0开始，SMIL动画被弃用了，Chrome致力于使用CSS动画来实现所有的SMIL效果。
+> 自从Chrome 45.0开始，SMIL动画被弃用了，Chrome致力于使用CSS动画来实现所有的SMIL动画效果。
 
 `svg`的`SMIL`动画类型包括`<animate>`、`<animateMotion>`、`<animateTransform>`
 
@@ -170,12 +170,12 @@ motionPath.animate(rotationKeyframes, rotationTiming);
 说到`js`操作`svg`就不得不提到`snapsvg.js`这个裤的，堪称是`svg`界的`jquery`，可以让我们方便的操作`svg`元素，具体内容就不展开了，但是有一点要提醒的是`snapsvg.js`在使用`attr`时候有一个性能`bug`，可以换成原生的方法直接操作元素的相关属性。
 
 ```js
-this.doc.attr({ transform: 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')' }); // 性能差 snap内部实现的问题
-this.doc.attr('transform', 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')'); // 性能差 snap内部实现的问题
-this.doc.attr({ cx: this.x, cy: this.y }); // 性能一般 snap内部实现的问题
-this.doc.node.style.transform = 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')'; // 性能优秀
-this.doc.node.setAttribute('cx', this.x); // 性能优秀
-this.doc.node.setAttribute('cy', this.y); // 性能优秀
+doc.attr({ transform: 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')' }); // 性能差 snap内部实现的问题
+doc.attr('transform', 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')'); // 性能差 snap内部实现的问题
+doc.attr({ cx: this.x, cy: this.y }); // 性能一般 snap内部实现的问题
+doc.node.style.transform = 'matrix(1,0,0,1,' + this.x + ',' + this.y + ')'; // 性能优秀
+doc.node.setAttribute('cx', this.x); // 性能优秀
+doc.node.setAttribute('cy', this.y); // 性能优秀
 ```
 
 
