finish: node installation

--- a/papers/2015-01-10-安装node和使用.md
+++ b/papers/2015-01-10-安装node和使用.md
@@ -3,45 +3,69 @@ title: 安装node和使用
 date: 2015-01-10
 ---
 
-npm install npm@latest -g 更新全局的npm版本
-npm安装总是会遇到权限的问题，一般来说出现在UNIX系的系统比较多，看到很多人都是用sudo来解决，但是这个不是最佳方式，可以通过chown -R 来给相应的npm全局目录增加
+> 其实安装`node`的方式很简单，直接在`node`的官网上下载相应的安装包就可以了。但是我们可以通过其他工具来安装并且管理`node`的版。我们都知道`node`是一个不折不扣的版本帝，更新非常频繁，并且各个版本的`node`还存在一些差异。因此为了保护好自己，不被`node`的版本所坑到，我们很有必要使用管理工具来管理`node`。
 
+## `nvm`
+`nvm`是`Linux`系列系统上的一个非常好用的`node`版本管理工具，它能让我们非常方便的管理`node`。`nvm`的安装也非常简单，只需要通过几句命令就可以安装好了。
+```shell
+curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
+```
+或者
+```shell
+wget -qO- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
+```
+运行完之后再运行命令
+```shell
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh" # This loads nvm
+```
+此时`nvm`命令就是可用的了，我们可以通过几个方法来验证`nvm`是否安装成功。
+```shell
+// 输出 nvm 代表安装成功
+command -v nvm
+
+// 输出 nvm.sh 的源码代表安装成功
+type nvm
+
+// which nvm 是不行的，因为nvm只是一个shell脚本程序，不是一个可执行文件所以which命令并不适用
+```
+当`nvm`可用之后我们可以使用`nvm`的命令来安装`node`了，直接使用
+```shell
+// 安装node
+nvm install v4.3.0
+
+// 使用某个版本的node
+nvm use 4.3.0
+
+// 使用某个版本的node运行js程序
+nvm run 4.3.0 app.js
+
+// 在子shell窗口运行指定版本的 node app.js
+nvm exec 4.3.0 node app.js
+
+// 查看某个版本的根目录
+nvm which 5.0
+```
+
+## 不用处理权限问题
+
+一般在`linux`系列的操作系统使用`node`官网的安装包来安装`node`的都会遇到用`npm`安装全局模块时发生权限问题，但是如果我们是使用`nvm`来安装的话就可以避免这个问题。
+
+当然这个问题也是可以我们自己解决的，我们可以通过`chown`命令来改变全局`npm`模块目录的权限组。
+
+```shell
 sudo chown -R $(whoami) $(npm config get prefix)/{lib/node_modules,bin,share}
+```
 
-来chown命令结构
-chown [选项]... [所有者][:[组]] 文件...
+这样我们就可以愉快的使用`npm i -g xxx`来安装模块了，避免了每次使用`sudo`来安装已经`sudo`带来的各种坑和遗留问题。
 
-	必要参数:
+当然Mac用户也可以使用homebrew来安装node，他会默认帮你配置好权限问题
 
-　　　　-c 显示更改的部分的信息
-
-　　　　-f 忽略错误信息
-
-　　　　-h 修复符号链接
-
-　　　　-R 处理指定目录以及其子目录下的所有文件
-
-　　　　-v 显示详细的处理信息
-
-　　　　-deference 作用于符号链接的指向，而不是链接文件本身
-
-　　选择参数:
-
-　　　　--reference=<目录或文件> 把指定的目录/文件作为参考，把操作的文件/目录设置成参考文件/目录相同拥有者和群组
-
-　　　　--from=<当前用户：当前群组> 只有当前用户和群组跟指定的用户和群组相同时才进行改变
-
-　　　　--help 显示帮助信息
-
-　　　　--version 显示版本信息
-
-ls -al
-whoami
-
-
-查找npm的全局目录npm config get prefix
-获取npm的全局目录npm config set prefix ~/xxx
-
+```
 brew install node
-Mac用户可以使用homebrew来安装node，这样他会默认帮你配置好权限问题
+```
+
+
+
+
 
