update: adjust some style

--- a/papers/2015-01-11-npm模块安装.md
+++ b/papers/2015-01-11-npm模块安装.md
@@ -26,7 +26,7 @@ npm [ install | i ] [ --save-optional | -O ] jcc2d
 
 
 
-###### 更新`npm`版本
+#### 更新`npm`版本
 
 ```shell
 // 更新到最新版本
@@ -66,7 +66,7 @@ sudo chown -R $(whoami) $(npm config get prefix)/{lib/node_modules,bin,share}
 
 ```
 
-###### 获取`npm`配置
+#### 获取`npm`配置
 
 获取`npm`的全局目录
 
@@ -80,14 +80,14 @@ npm config get prefix
 npm config set prefix ~/xxx
 ```
 
-###### 卸载模块
+#### 卸载模块
 
 ```sh
 npm uninstall -g jcc2d
 // aliases: remove, rm, r, un, unlink
 ```
 
-###### 更新模块
+#### 更新模块
 
 跟新全局已安装的模块，或者根据本地的`package.json`更新本地模块。
 
@@ -95,26 +95,26 @@ npm uninstall -g jcc2d
 npm update [-g]
 ```
 
-###### 检查模块是否过时
+#### 检查模块是否过时
 
 ```sh
 npm outdated [-g]
 ```
 
-###### 查看模块
+#### 查看模块
 
 ```sh
 npm ls [-g]
 // aliases: list, la, ll
 ```
 
-###### 查看包的安装路径
+#### 查看包的安装路径
 
 ```sh
 npm root [-g]
 ```
 
-###### 管理npm的配置路径
+#### 管理npm的配置路径
 
 ```sh
 npm config
@@ -135,13 +135,13 @@ npm set <key> <value> [-g|--global]
 
 ```
 
-###### 设置网络代理
+#### 设置网络代理
 
 ```sh
 npm config set proxy=http://dev-proxy.oa.com:8080
 ```
 
-###### 设置镜像
+#### 设置镜像
 
 ```sh
 npm config set registry="http://r.cnpmjs.org"
@@ -153,13 +153,13 @@ npm config set registry="http://r.cnpmjs.org"
 npm install -g cnpm --registry=https://registry.npm.taobao.org
 ```
 
-###### 管理模块的缓存
+#### 管理模块的缓存
 
 ```sh
 npm cache
 ```
 
-###### 管理模块版本相关
+#### 管理模块版本相关
 
 ```sh
 npm version
@@ -174,7 +174,7 @@ npm version [<newversion> | major | minor | patch | premajor | preminor | prepat
 
 ```
 
-###### 查看模块的注册信息
+#### 查看模块的注册信息
 
 ```sh
 npm view
@@ -202,20 +202,20 @@ npm view jcc2d repository.url
 npm view jcc2d contributors
 ```
 
-###### 用户登录
+#### 用户登录
 
 ```sh
 npm adduser
 npm adduser --registry=url [--always-auth]
 ```
 
-###### 在发布的包上设置访问级别
+#### 在发布的包上设置访问级别
 
 ```sh
 npm access
 ```
 
-###### 发布模块
+#### 发布模块
 
 ```sh
 npm publish
@@ -223,7 +223,7 @@ npm publish
 
 
 
-##### 默认值
+#### 默认值
 
 npm会根据包内容设置一些默认值。
 
@@ -265,7 +265,7 @@ npm会根据包内容设置一些默认值。
 }
 ```
 
-##### 依赖URL
+#### 依赖URL
 
 ```sh
 git://github.com/user/project.git#commit-ish
@@ -275,7 +275,7 @@ git+http://user@hostname/project/blah.git#commit-ish
 git+https://user@hostname/project/blah.git#commit-ish
 ```
 
-##### GitHub URLs
+#### GitHub URLs
 
 可以`username/project`的方式来以来github上的模块
 
@@ -285,17 +285,17 @@ git+https://user@hostname/project/blah.git#commit-ish
 }
 ```
 
-##### 设置模块过时
+#### 设置模块过时
 ```sh
 npm deprecate
 ```
 
-##### 常用`npm help`方法
+#### 常用`npm help`方法
 
 我们没办法记住所有的`npm`命令，所以在我们不记得的时候可以`npm help`来查看详细的介绍。
 
 
-##### Script install and uninstall
+#### Script install and uninstall
 
 some about .npmrc and npm config
 
@@ -311,9 +311,9 @@ npm help view
 
 
 
-##### 常用`UNIX`命令
+#### 常用`UNIX`命令
 
-###### 查看文件夹内容命令
+#### 查看文件夹内容命令
 
 windows下：
 
