update: adjust style about npm

--- a/papers/2015-01-11-npm模块安装.md
+++ b/papers/2015-01-11-npm模块安装.md
@@ -168,10 +168,9 @@ npm version [<newversion> | major | minor | patch | premajor | preminor | prepat
 
 // 'npm [-v | --version]' 显示npm的版本
 
-'npm view <pkg> version' 显示某个模块的版本
+// 'npm view <pkg> version' 显示某个模块的版本
 
-'npm ls' 检查当前 package/dependency 模块的版本信息
-
+// 'npm ls' 检查当前 package/dependency 模块的版本信息
 ```
 
 #### 查看模块的注册信息
