update: add some todo

--- a/papers/2015-01-11-npm模块安装.md
+++ b/papers/2015-01-11-npm模块安装.md
@@ -237,6 +237,16 @@ npm会根据包内容设置一些默认值。
 ```
 
 ```
+"scripts":{"install": ""}
+模块在安装之后会自动运行一次install命令。
+```
+
+```
+"scripts":{"uninstall": ""}
+模块在卸载之后会自动运行一次uninstall命令。
+```
+
+```
 "scripts":{"preinstall": "node-gyp rebuild"}
 如果包的根目录有binding.gyp文件，npm会默认将preinstall命令用node-gyp进行编译。
 ```
@@ -291,16 +301,12 @@ npm deprecate
 
 #### 常用`npm help`方法
 
-我们没办法记住所有的`npm`命令，所以在我们不记得的时候可以`npm help`来查看详细的介绍。
-
-
-#### Script install and uninstall
-
-some about .npmrc and npm config
-
-如果不清楚npm的命令可以使用`npm`的`help`命令，例如view命令:
+我们没办法记住所有的`npm`命令，如果不清楚npm的命令可以使用`npm help`命令，例如view命令:
 
 ```shell
 npm help view
 ```
 
+#### TODO
+
+- [ ] some about .npmrc and npm config
