update: add some stuff

--- a/papers/2015-01-11-npm模块安装.md
+++ b/papers/2015-01-11-npm模块安装.md
@@ -256,6 +256,8 @@ npm会根据包内容设置一些默认值。
 如果包的根目录有AUTHORS文件，npm会默认逐行按Name <email> (url)格式处理，邮箱和url是可选的。#号和空格开头的行会被忽略。
 ```
 
+`npm`在模块安装、发布等一系列时机都会默认运行一些`script`，具体可查看[npm-scripts](https://docs.npmjs.com/misc/scripts)
+
 #### `npm`的[semver](https://docs.npmjs.com/misc/semver)版本
 
 ```sh
