--- a/papers/2015-01-20-UNIX下常用的命令.md
+++ b/papers/2015-01-20-UNIX下常用的命令.md
@@ -3,8 +3,18 @@ title: UNIX下常用的命令
 date: 2015-01-20
 ---
 
+一些可以整合进来的[命令使用技巧](http://www.ruanyifeng.com/blog/2016/10/npm_scripts.html)
 
 #### 常用`UNIX`命令
+
+```sh
+cd `npm get prefix`
+cd $(npm get prefix)
+```
+
+##### `lsof`命令
+
+##### `grep`命令
 
 #### 查看文件夹内容命令
 
