chore: add status key

--- a/papers/2015-01-10-安装node和使用.md
+++ b/papers/2015-01-10-安装node和使用.md
@@ -1,6 +1,7 @@
 ---
 title: 安装node和使用
 date: 2015-01-10
+status: finished
 ---
 
 > 其实安装`node`的方式很简单，直接在`node`的官网上下载相应的安装包就可以了。但是我们可以通过其他工具来安装并且管理`node`的版。我们都知道`node`是一个不折不扣的版本帝，更新非常频繁，并且各个版本的`node`还存在一些差异。因此为了保护好自己，不被`node`的版本所坑到，我们很有必要使用管理工具来管理`node`。
