--- a/papers/2015-01-20-UNIX下常用的命令.md
+++ b/papers/2015-01-20-UNIX下常用的命令.md
@@ -1,6 +1,7 @@
 ---
 title: UNIX下常用的命令
 date: 2015-01-20
+status: doing
 ---
 
 一些可以整合进来的[命令使用技巧](http://www.ruanyifeng.com/blog/2016/10/npm_scripts.html)
