update: add some tips

--- a/papers/2015-07-10-现代浏览器渲染流水线.md
+++ b/papers/2015-07-10-现代浏览器渲染流水线.md
@@ -12,3 +12,5 @@ status: doing
     CPU做光栅化的优势是可以很方便的处理非常复杂的几何描述，例如文字的几何描述、svg-path等等这种强逻辑的路径描述等。当然缺点也很明显，例如参杂了复杂的逻辑和不可并行的特点，CPU光栅化速度会比较慢。
     GPU的光栅化的优势是，GPU可以极高并发的
     其实，当我们的页面从服务器请求回来时还是一些基于文本的描述，当浏览器得到html描述和css样式描述之后，浏览器就会开始解析这些描述然后变成一块一块的几何数据表述（例如描述一块内容的边框坐标点，边框的填充颜色等等基于几何数据的描述信息。可以想象成svg的那种描述方式）。数学几何数据光栅化之后就是一张基于像素点位图了（bitmap:基于像素的描述，可以想象成jpg、png这种类型的图片）。然而目前的这一个过程还是通过CPU实现的（当然，chromuim正计划将这里适合GPU实现的步骤移交到GPU内进行处理，并且有了实质进展 感兴趣的请参考：Slimming Paint），之所以采用CPU实现这一过程的主要原因是类似于text、svg-path这种东西的路径描述比较复杂，有些时候还会有很强的逻辑在里面，比如在绘制svg-path时可能会出现某一点的位置可能会受到前N个点的影响，这种强逻辑在GPU上是不适合的，GPU擅长处理的是单纯无逻辑的点、线、三角形数据。
+
+由于文档流的关系，后面DOM的层级默认情况下高于前面的，所以如果出现overlap的layer可以通过查看前面节点的层级来定位问题。
