update(browser render flow): add some p

--- a/papers/2015-07-10-现代浏览器渲染流水线.md
+++ b/papers/2015-07-10-现代浏览器渲染流水线.md
@@ -19,12 +19,43 @@ status: doing
 
 创建`DOM`树只是浏览器渲染页面的第一步，在创建完了`DOM`树和接收完`css`样式之后就会利用`css`和`DOM`树创建出`RenderObject`树。创建`RenderObject`树的具体步骤如下：
 
-1. 将`css`解析成内部对象，并匹配作用到`DOM`树上相应的`DOM`节点，这样就形成了`RenderObject`树。
-2. `RenderObject`树在创建的同时，浏览器会根据页面的层次结构创建`RenderLayer`树。同时为`RenderLayer`创建虚拟的绘图上下文。
+1. 将`css`解析成内部对象，并匹配作用到`DOM`树上相应的`DOM`节点，同时去掉一些不可见的`DOM`后就形成了`RenderObject`树。
+2. `RenderObject`树为了布局计算和后续渲染所构建的一个内部树形结构，每个`RenderObject`节点保存供浏览器绘制`DOM`的各种信息。
+3. `document`节点、可视化节点、渲染需要的`RenderBlock`节点都会创建`RenderObject`
+4. `RenderObject`树在创建的同时，浏览器会根据页面的层次结构创建`RenderLayer`树。同时为`RenderLayer`创建虚拟的绘图上下文。
 
-本来到这里浏览器就可以调用光栅化器来开始绘制图像了，但是这样做并不优化。按照这种方式的话，页面只绘制一次还好，要是页面里面某个位置有一个带有动画的元素的话，浏览器就得一遍一遍的重新光栅化整个页面（聪明的浏览器会只绘制脏区域，但是也会涉及到一系列牵连元素计算同样耗时）。
+> `RenderBlock`是用来表示块元素的，但是在某种情况下`webkit`需要创建匿名的`RenderBlock`对象。`RenderBlock`对象的子女必须是同种类型的元素（内联、块）当`RenderBlock`里面包含两张类型的元素时，浏览器就是创建匿名的`RenderBlock`对象来包裹那些内联的元素。
+
+`RenderObject`常见的实例对象：
+
+1. `RenderView`: 一般是为document创建的
+2. `RenderBlock`: 一般是为块级内容创建的
+3. `RenderInline`: 一般是为内联内容创建的
+4. `RenderSVGModel`: 一般是为svg内容创建的
+
+在创建完`RenderObject`树之后，并没有到达渲染的地步。因为网页里面的某些可能有层叠关系，并且还有变透明效果，甚至还有现代web样式的滤镜效果，颜色叠加等特殊效果。目前的结果并不能很好的视线这些，所以浏览器在创建完`RenderObject`树之后为某些具有特殊属性的`RenderObject`创建`RenderLayer`对象。一般来说，某个`RenderObject`节点的后代都属于该节点，除非`webkit`为某些后代`RenderObject`节点创建了一个新的`RenderLayer`对象。那么具备哪些特性的`RenderObject`会被提升为`RenderLayer`对象呢？具体有以下几个规则：
+
+1. `document`节点对应的`RenderView`节点（`RenderView`类是`RenderObject`类的实例）
+2. `HTML`节点对应的`RenderBlock`节点。
+3. 明确的给定了`CSS position`，这里的`position`包括`position:absolute`、 `position:relative`、 `transform`。
+4. 有透明度效果的`RenderObject`节点
+5. 有`overflow`、 `alhpa遮罩`、 `css 反射`等效果的`RenderObject`节点
+6. `canvas 2d|3d`的`RenderObject`节点
+7. `video`节点对应的`RenderObject`节点
+
+到这个时候，页面的渲染准备已经基本完成。早在`RenderObject`树中每个`RenderObject`节点内部都已经保存了该节点内的所有内容的绘制命令和数据。本来到这里浏览器就可以调用光栅化器来开始绘制图像了，但是这样做并不优化。因为我们的网页不可能只绘制一次，网页绘制完之后可能还会有非常多的更新绘制，所以我们需要设计出一个方式来减小绘制的成本。
 
 > 光栅化的过程可以理解成是将元素从几何数据、纹理数据、矩阵姿态等这些综合描述的形式经过计算扫描生成像素描述形式的过程。
+
+在讲渲染之前，我们先来介绍几种比较常用的渲染方式。
+
+### 渲染方式
+
+我们知道，渲染一般可以采用两种方式，一种是基于`CPU`的`软件渲染`方式，还有一个就是基于`GPU`的`硬件渲染`方式。当然还有一种鉴于这两种方式之间的一种方式`软件渲染的合成化`。
+
+其实`webkit`内核的浏览器就是采用这种混合的方式，一部分复杂逻辑绘制的层交由`CPU`来进行软件渲染（例如大量的`文本类型`的层、复杂的`svg路径`的层），几何特征明显的层交由`GPU`来进行硬件渲染。这样处理的原因是由于`文本类型`和`svg路径`在渲染之前都是由一些复杂路径来描述的几何图形，并且其中还有大量的点的位置是由上一个甚至上N个点的位置来确定的，这种携带者逻辑的描述方式并不适合`GPU`的渲染流水线，在这种情况下反倒使用`CPU`来渲染更加合适，`GPU`只适合渲染那些几何数据点很简单、很明确的几何图形。
+
+上面介绍了目前大部分浏览器采用的渲染方案是一种`软件绘图加合成化渲染`的方式，那到底什么是`软件绘图加合成化渲染`呢？其实`软件绘图加合成化渲染`就是将渲染任务
 
 
 
@@ -38,6 +69,9 @@ Chromium采用的是多进程架构，主要有`Browser进程`、可以有多个
 * NAPI插件进程：只会为同一类插件创建一个进程，多个页面上使用的同个插件是共享同一个进程的。
 * Pepper插件进程： 和NAPI类似
 
+
+> 但是在Android平台上，GPU进程演化成Renderer进程的一个线程，这主要是为了节省资源。
+> 并且Renderer进程在Android上也会演变成一个安卓系统的`服务service`进程，同时由于受安卓系统的限制Renderer进程的数量会被严格限制，主要表现就是处于后台的页面都只是一个影子快照，这个时候浏览器将会移除这种页面的渲染设施，只有当用户切换回来的时候才会重新加载和渲染。
 
 
 renderObject
