chore: build some paper

--- a/papers/2015-07-10-现代浏览器渲染流水线.md
+++ b/papers/2015-07-10-现代浏览器渲染流水线.md
@@ -1,7 +1,7 @@
 ---
 title: 现代浏览器渲染流水线
 date: 2015-07-10
-status: doing
+status: finished
 ---
 
 浏览器的渲染流水线是一个即有趣又比较复杂的渲染流程，有趣是因为它的每一步都是那么的符合图形渲染的规则，而复杂是因为整个渲染过程是一个融合了各种综合的技术在里面是一个比较复杂的技术系统。为了讲清楚现代浏览器的渲染流水线，我们先从一些简单的开始。
